<resources>
    <string name="app_name">CSGO_smokes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="maps">Maps</string>
    <string name="title_activity_mirage">mirage</string>
    <string name="mirage">mirage</string>
    <string name="cache">cache</string>
    <string name="overpass">overpass</string>
    <string name="train">train</string>
    <string name="nuke">nuke</string>
    <string name="dust2">dust2</string>
    <string name="inferno">inferno</string>
    <string name="cbble">cbble</string>
    <string name="a_connector_jungle"><![CDATA[A: Connector & Jungle]]></string>
    <string name="a_ct">A: CT</string>
    <string name="a_stairs">A: Stairs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mirage_sitea_con_jun_step1">mirage_sitea_con_jun_step1</string>
</resources>
