<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="#000000"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_mirage"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/mirage"
        android:fontFamily="@font/gooddp__"
        android:text="@string/mirage"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_dust2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_cache"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cache"
        android:fontFamily="@font/gooddp__"
        android:text="@string/cache"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btn_overpass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dust2" />

    <Button
        android:id="@+id/btn_overpass"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/overpass"
        android:fontFamily="@font/gooddp__"
        android:text="@string/overpass"
        android:textAllCaps="true"
        android:layout_marginRight="8dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mirage" />

    <Button
        android:id="@+id/btn_train"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/train"
        android:fontFamily="@font/gooddp__"
        android:text="@string/train"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_inferno"
        app:layout_constraintTop_toBottomOf="@+id/btn_overpass" />

    <Button
        android:id="@+id/btn_nuke"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nuke"
        android:fontFamily="@font/gooddp__"
        android:layout_marginRight="8dp"
        android:text="@string/nuke"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_cbble"
        app:layout_constraintTop_toBottomOf="@+id/btn_train" />

    <Button
        android:id="@+id/btn_dust2"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:alpha="1"
        android:background="@drawable/dust2"
        android:fontFamily="@font/gooddp__"
        android:text="@string/dust2"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_inferno"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/inferno"
        android:fontFamily="@font/gooddp__"
        android:text="@string/inferno"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cache" />

    <Button
        android:id="@+id/btn_cbble"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cbble"
        android:fontFamily="@font/gooddp__"
        android:text="@string/cbble"
        android:textAllCaps="true"
        android:layout_marginLeft="8dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textSize="40dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inferno" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/gooddp__"
        android:text="select a map"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu"
        android:textColor="#ffff00"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SELECT A MAP" />


</android.support.constraint.ConstraintLayout>